# WardenWG

./: .env.example  .gitignore  Dockerfile  README.md  codex.md  docker-compose.yml  pyproject.toml  wardenwg.db
app/: main.py  web.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: __init__.py  device.py  login_ip_block.py  node.py  peer.py  subscription_log.py  traffic.py  user.py  web_account.py
app/routers/: deps.py  nodes.py  subscriptions.py  tasks.py  users.py
app/schemas/: common.py  node.py  user.py
app/services/: ip_allocator.py  keygen.py  node_meta.py  node_sync.py  sessions.py  ssh.py  subscription.py  traffic.py  traffic_queries.py  users.py  web_auth.py
app/tasks/: scheduler.py
app/templates/: admin_dashboard.html  admin_login.html  base.html  main.yaml.j2  nodes.yaml.j2  portal_home.html  portal_login.html
migrations/: README.md
scripts/: seed_nodes.py  wardenwg_merge_peers.py
